--- a/index.html
+++ b/index.html
@@ -1,154 +1,195 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=BioRhyme|Cabin&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-    <style>
-       @page {
-         margin: 0;
-       }
-      *,
-      *::after,
-      *::before {
-      box-sizing: border-box;
-      }
-      html, body {
-      padding: 0;
-      margin: 0;
-      }
-      html, body, .wrapper {
-      height: 100%;
-      }
-      .wrapper {
-      background-color: ${colors[data.color].wrapperBackground};
-      padding-top: 100px;
-      }
-      body {
-      background-color: white;
-      -webkit-print-color-adjust: exact !important;
-      font-family: 'Cabin', sans-serif;
-      }
-      main {
-      background-color: #E9EDEE;
-      height: auto;
-      padding-top: 30px;
-      }
-      h1, h2, h3, h4, h5, h6 {
-      font-family: 'BioRhyme', serif;
-      margin: 0;
-      }
-      h1 {
-      font-size: 3em;
-      }
-      h2 {
-      font-size: 2.5em;
-      }
-      h3 {
-      font-size: 2em;
-      }
-      h4 {
-      font-size: 1.5em;
-      }
-      h5 {
-      font-size: 1.3em;
-      }
-      h6 {
-      font-size: 1.2em;
-      }
-      .photo-header {
-      position: relative;
-      margin: 0 auto;
-      margin-bottom: -50px;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      background-color: ${colors[data.color].headerBackground};
-      color: ${colors[data.color].headerColor};
-      padding: 10px;
-      width: 95%;
-      border-radius: 6px;
-      }
-      .photo-header img {
-      width: 250px;
-      height: 250px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-top: -75px;
-      border: 6px solid ${colors[data.color].photoBorderColor};
-      box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
-      }
-      .photo-header h1, .photo-header h2 {
-      width: 100%;
-      text-align: center;
-      }
-      .photo-header h1 {
-      margin-top: 10px;
-      }
-      .links-nav {
-      width: 100%;
-      text-align: center;
-      padding: 20px 0;
-      font-size: 1.1em;
-      }
-      .nav-link {
-      display: inline-block;
-      margin: 5px 10px;
-      }
-      .workExp-date {
-      font-style: italic;
-      font-size: .7em;
-      text-align: right;
-      margin-top: 10px;
-      }
-      .container {
-      padding: 50px;
-      padding-left: 100px;
-      padding-right: 100px;
-      }
-
-      .row {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-
-      .card {
-        padding: 20px;
-        border-radius: 6px;
-        background-color: ${colors[data.color].headerBackground};
-        color: ${colors[data.color].headerColor};
-        margin: 20px;
-      }
-
-      .col {
-      flex: 1;
-      text-align: center;
-      }
-
-      a, a:hover {
-      text-decoration: none;
-      color: inherit;
-      font-weight: bold;
-      }
-
-      @media print {
-       body {
-         zoom: .75;
-       }
-      }
-    </style>
-  </head>
-  <body></body>
-</html>
+  <html lang="en">
+     <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
+        <link href="https://fonts.googleapis.com/css?family=BioRhyme|Cabin&display=swap" rel="stylesheet">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <title>Document</title>
+        <style>
+            @page {
+              margin: 0;
+            }
+           *,
+           *::after,
+           *::before {
+           box-sizing: border-box;
+           }
+           html, body {
+           padding: 0;
+           margin: 0;
+           }
+           html, body, .wrapper {
+           height: 100%;
+           }
+           .wrapper {
+           background-color: #5F64D3;
+           padding-top: 100px;
+           }
+           body {
+           background-color: white;
+           -webkit-print-color-adjust: exact !important;
+           font-family: 'Cabin', sans-serif;
+           }
+           main {
+           background-color: #E9EDEE;
+           height: auto;
+           padding-top: 30px;
+           }
+           h1, h2, h3, h4, h5, h6 {
+           font-family: 'BioRhyme', serif;
+           margin: 0;
+           }
+           h1 {
+           font-size: 3em;
+           }
+           h2 {
+           font-size: 2.5em;
+           }
+           h3 {
+           font-size: 2em;
+           }
+           h4 {
+           font-size: 1.5em;
+           }
+           h5 {
+           font-size: 1.3em;
+           }
+           h6 {
+           font-size: 1.2em;
+           }
+           .photo-header {
+           position: relative;
+           margin: 0 auto;
+           margin-bottom: -50px;
+           display: flex;
+           justify-content: center;
+           flex-wrap: wrap;
+           background-color: #26175A;
+           color: white;
+           padding: 10px;
+           width: 95%;
+           border-radius: 6px;
+           }
+           .photo-header img {
+           width: 250px;
+           height: 250px;
+           border-radius: 50%;
+           object-fit: cover;
+           margin-top: -75px;
+           border: 6px solid #73448C;
+           box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
+           }
+           .photo-header h1, .photo-header h2 {
+           width: 100%;
+           text-align: center;
+           }
+           .photo-header h1 {
+           margin-top: 10px;
+           }
+           .links-nav {
+           width: 100%;
+           text-align: center;
+           padding: 20px 0;
+           font-size: 1.1em;
+           }
+           .nav-link {
+           display: inline-block;
+           margin: 5px 10px;
+           }
+           .workExp-date {
+           font-style: italic;
+           font-size: .7em;
+           text-align: right;
+           margin-top: 10px;
+           }
+           .container {
+           padding: 50px;
+           padding-left: 100px;
+           padding-right: 100px;
+           }
+  
+           .row {
+             display: flex;
+             flex-wrap: wrap;
+             justify-content: space-between;
+             margin-top: 20px;
+             margin-bottom: 20px;
+           }
+  
+           .card {
+             padding: 20px;
+             border-radius: 6px;
+             background-color: #26175A;
+             color: white;
+             margin: 20px;
+           }
+           
+           .col {
+           flex: 1;
+           text-align: center;
+           }
+  
+           a, a:hover {
+           text-decoration: none;
+           color: inherit;
+           font-weight: bold;
+           }
+  
+           @media print { 
+            body { 
+              zoom: .75; 
+            } 
+           }
+        </style>
+        </head>
+<body>
+  <div class="container wrapper">
+    <div class="row">
+      <div class="card photo-header">
+        <img src=https://avatars2.githubusercontent.com/u/55815570?v=4>
+        <h1>Hi!</h1>
+        <h1>My Name Is MinJin Park </h1>
+        <h3>currently working with null</h3>
+        <h4 class="links-nav">
+        <i class="fas fa-location-arrow fa-lg"></i><a href="https://www.google.com/maps/place/Johns Creek,GA" class="nav-link">Location</a>
+        <i class="fab fa-github-square fa-lg"></i><a href="https://github.com/MJP1986" class="nav-link">Github</a>
+        <i class="fas fa-blog fa-lg fa-lg"></i><a href="https://mjp1986.github.io/hw7-updated-portfolio/" class="nav-link">Blog</a>
+        </h4>
+      </div>
+    </div>
+    <div class="row">
+      <h4 class="col">I am a student attending the Georgia Tech Full Stack Web Development Boot Camp</h4>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="card wrapper">
+          <h3>Repositories</h3>
+          <h4>17</h4>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card wrapper">
+          <h3>Followers</h3>
+          <h4>16</h4>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="card wrapper">
+          <h3>Github Stars</h3>
+          <h4>1</h4>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card wrapper">
+          <h3>Following</h3>
+          <h4>19</h4>
+        </div>
+      </div>
+    </div>
+    </div>
+</body>
